# esp_KDI

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: attitude_estimator.c.E7B7152C48BA217E.idx  attitude_estimator.h.64D7752440A3F131.idx  battery.c.08EB483F6AA69C83.idx  battery.h.AFBB83CB87BC8C32.idx  drone_config.h.AAD0DF50DD37EBC8.idx  drone_types.h.676C512394DFB3CA.idx  flight_control.c.DF9A9BBB9E4A8CCB.idx  flight_control.h.D46666A4CDC74FDA.idx  imu.c.FA9E47E0AAEE7131.idx  imu.h.09767927B4AC7FA5.idx  led_ctrl.c.460D50911BC882F3.idx  led_ctrl.h.74465C3C1D120A67.idx  main.c.9E25751E480FB373.idx  math_utils.h.F25B1DA343F1F233.idx  motors.c.433A5B30BD8DED9F.idx  motors.h.97B0222B6F7556FB.idx  rc_sbus.c.0531C1EC5ABC0FB1.idx  rc_sbus.h.76853BF1E29AEA6C.idx  (+49 more)
components/attitude_estimator/: CMakeLists.txt  attitude_estimator.c
components/battery/: CMakeLists.txt  battery.c
components/drone_config/: CMakeLists.txt
components/flight_control/: CMakeLists.txt  flight_control.c
components/imu/: CMakeLists.txt  imu.c
components/imu/include/: imu.h
components/led_ctrl/: CMakeLists.txt  led_ctrl.c
components/math_utils/: CMakeLists.txt
components/motors/: CMakeLists.txt  motors.c
components/rc_sbus/: CMakeLists.txt  rc_sbus.c
components/tof_sensor/: CMakeLists.txt  tof_sensor.c
components/vl53l1x-st-api/: CMakeLists.txt  vl53l1_platform.c
components/web_rc/: CMakeLists.txt  web_rc.c  web_rc.html
components/wifi_ap/: CMakeLists.txt  wifi_ap.c
docs/: TOF400C-VL53L1X_Usage.md  system_architecture.md
main/: CMakeLists.txt  main.c
(+12 files in other folders)
